--- a/scss/_editor-columns.scss
+++ b/scss/_editor-columns.scss
@@ -98,5 +98,6 @@ body#tinymce.wp-editor {
 	 */
 	.pbsandwich_column td img {
 		max-width: 100%;
+		height: auto;
 	}
 }
